[package]
name = "memory"
version = "1.1.2"
edition = "2021"
authors = ["Romeo Disca"]
readme = "README.md"
license = "MIT"
license-file = "LICENSE.md"
repository = "https://github.com/i-think-rapido/rust-memory.git"
homepage = "https://github.com/i-think-rapido/rust-memory"
description = "HashMap implementation with forget function"
documentation = "https://docs.rs/memory/latest/memory/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12.1"
time = "0.3.30"

[dev-dependencies]
common_macros = "0.1.1"
